@@ -1,7 +1,7 @@
 <div align="center">
 <img src="m4.png"/><br>
 <img src="https://img.shields.io/badge/ElvUI-12.79-blue.svg?longCache=true&style=for-the-badge"/>
-<img src="https://img.shields.io/badge/Version-4.94-orange.svg?longCache=true&style=for-the-badge"/>
+<img src="https://img.shields.io/badge/Version-4.95-orange.svg?longCache=true&style=for-the-badge"/>
 </div>
 
 -----
