@@ -1,2 +1,6 @@
-[b][color=orange]v4.94[/color], 01.05.2022[/b][list]
-[*]Decided to remove the Vehicle Bar. Sorry for the confusion[/list]
+[b][color=orange]v4.95[/color], 08.05.2022[/b][list]
+[*]Adjust AFK/DND Colors on my NameHover to reflect ElvUI Changes
+[*]Updated the code from HealPrediction. Credits: Windtools
+[*]Added new Texture 4Pixel
+[*]Added more options to change the Objective Tracker skin. Credits: Windtools
+[*]Added an Item Level String to the Guild News. Credits: Windtools[/list]
